Fix keyboard on iPhone

--- a/css/index.scss
+++ b/css/index.scss
@@ -75,7 +75,7 @@ input {
                 user-select: none;
 
                 &.modifier {
-                    background: rgb(210, 216, 227);
+                    background: rgb(216, 221, 231);
                     width: 100%;
                     max-width: 10vw;
                     border: none;
@@ -197,6 +197,12 @@ input {
 }
 .sampleInput {
     color: #000;
+}
+
+@media screen and (min-width: 420px) and (max-width: 499px) {
+    .keysFrame {
+        --key-width: 8vw !important;
+    }
 }
 
 @media screen and (max-width: 500px) {
